# videoseal

./: .gitignore  README.md  inference_av.py  inference_streaming.py  inference_streaming_helpers.py  pyproject.toml  requirements.txt  streamlit_app.py  train.py
ckpts/: cin_nsm_decoder.pt  cin_nsm_encoder.pt  hidden_decoder_48b.pt  hidden_encoder_48b.pt  mbrs_256_m256_decoder.pt  mbrs_256_m256_encoder.pt  trustmark_decoder_q.pt  trustmark_encoder_q.pt  wam_decoder.pt  wam_encoder.pt
configs/: attenuation.yaml  augs.yaml  embedder.yaml  extractor.yaml
docs/: baselines.md  torchscript.md  training.md  vmaf.md
notebooks/: colab.ipynb  image_inference.ipynb  video_inference.ipynb  video_inference_streaming.ipynb
videoseal/: __init__.py
videoseal/augmentation/: __init__.py  augmenter.py  geometric.py  masks.py  sequential.py  valuemetric.py  video.py
videoseal/cards/: videoseal.yaml
videoseal/data/: datasets.py  loader.py  transforms.py
videoseal/data/sav_dataset/: sav_utils.py
videoseal/evals/: full.py  metrics.py  speed.py
videoseal/losses/: dists.py  focal.py  jndloss.py  perceptual.py  ssim.py  videosealloss.py  watson_fft.py  watson_vgg.py  yuvloss.py
videoseal/models/: __init__.py  baselines.py  blender.py  embedder.py  extractor.py  videoseal.py  wam.py
videoseal/modules/: __init__.py  common.py  convnext.py  discriminator.py  hidden.py  jnd.py  msg_processor.py  pixel_decoder.py  unet.py  vae.py  vit.py
videoseal/utils/: __init__.py  cfg.py  data.py  display.py  dist.py  image.py  logger.py  optim.py  tensorboard.py
